<resources>
    <string name="app_name">Whiskipe</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="label_addItem">Add item to Pantry</string>
    <string name="label_name">Name</string>
    <string name="label_qty">Quantity</string>
    <string name="label_size">Size</string>
    <string name="button_add">Add</string>
    <string name="button_back">Back</string>

    <string name="label_loginTitle">Login to account</string>
    <string name="label_username">Username</string>
    <string name="label_firstname">First Name</string>
    <string name="label_lastname">Last Name</string>
    <string name="label_active">Active</string>
    <string name="button_login">Login</string>
    <string name="button_createuser">Create User</string>

    <string name="label_createUserTitle">Create Whiskipe Account</string>
    <string name="button_createAccount">Create Account</string>

    <string name="create_username">Create Username</string>

    <string name="button_home">Home</string>

    <string name="website_label">whiskipe.x10host.com</string>
    <string name="visitwebsite">Visit Website</string>
    <string name="sendfeedback">Send Feedback</string>
    <string name="reportbug">Report Bug</string>
    <string name="deleteUser">Delete User</string>
</resources>
