<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.katel.whiskipe.MainActivity">

    <item
        android:id="@+id/action_add"
        android:title="@string/add"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_update"
        android:title="@string/update"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_login"
        android:icon="?android:attr/fingerprintAuthDrawable"
        android:title="@string/login"
        app:showAsAction="ifRoom" />
</menu>
