<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin">

    <!--Name-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:layout_marginTop="50dp"
        android:id="@+id/label_name"/>

    <EditText
        android:id="@+id/input_name"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_name"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@+id/label_name"
        android:orientation="horizontal" />

    <!--Quantity-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_qty"
        android:layout_marginTop="50dp"
        android:id="@+id/label_qty"
        android:layout_below="@+id/label_name"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_qty"
        android:layout_alignBottom="@+id/label_qty"
        android:layout_toRightOf="@+id/label_qty"
        android:inputType="numberDecimal"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/input_name"/>

    <!--Size-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_size"
        android:layout_marginTop="50dp"
        android:id="@+id/label_size"
        android:layout_below="@+id/label_qty"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/input_size"
        android:layout_alignBottom="@+id/label_size"
        android:layout_toRightOf="@+id/label_size"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/input_name"/>

    <!--Add Button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:layout_marginTop="50dp"
        android:id="@+id/button_add"
        android:layout_below="@+id/label_size"
        android:onClick="insert"
        android:layout_centerHorizontal="true"/>

    <!--Back Button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button_add"
        android:onClick="goBack"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>