<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin">


    <!--Home button-->
    <ImageView
        android:id="@+id/button_home"
        android:layout_width="153dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:src="@drawable/whiskipe_logo" />

    <!--Login Title-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/label_loginTitle"
        android:id="@+id/label_loginTitle"
        android:layout_below="@id/button_home"/>

    <!--Username-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_username"
        android:layout_marginTop="30dp"
        android:id="@+id/label_username"
        android:layout_below="@+id/label_loginTitle"/>

    <EditText
        android:id="@+id/edittext_usernamenew"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_username"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@+id/label_username"
        android:orientation="horizontal" />

    <!--First Name-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_firstname"
        android:layout_marginTop="30dp"
        android:id="@+id/label_firstname"
        android:layout_below="@+id/label_username"/>

    <EditText
        android:id="@+id/edittext_firstnamenew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_firstname"
        android:layout_alignLeft="@+id/edittext_usernamenew"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/label_firstname" />

    <!--Last Name-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_lastname"
        android:layout_marginTop="30dp"
        android:id="@+id/label_lastname"
        android:layout_below="@+id/label_firstname"/>

    <EditText
        android:id="@+id/edittext_lastnamenew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_lastname"
        android:layout_alignLeft="@+id/edittext_usernamenew"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/label_lastname" />

    <!--Login Button-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:layout_marginTop="20dp"
        android:id="@+id/button_login"
        android:layout_below="@+id/label_lastname"
        android:onClick="createUserAndLogin"
        android:layout_centerHorizontal="true"/>




</RelativeLayout>